** WrqModifier process() does not any more return a fragment in some cases but do now always work on the input document
** bnd:Coalesce in Binding files was removed
** getTableName() was renamed to getTableReference()
and needs also to be updated sql expression strings compiled with SQLEngine::transform()  "... $k.getTableName()..." -> $k.getTableReference() or simply $k

.Server:
* allow client sided setting of bcdUserBean values via subjectAttributeManager servlet. ${bcdUserBean:name} in urls will be replaced and forwarded. Server sided read/write security via SubjectFilterType "bcdUserBean:name".
* introduce UserSettingsDefaults to subjectSettings.xml to specify user default permissions (add de.businesscode.bcdui.subjectsettings.DefaultSettingsRealm to your realms)
* added document uploader classes


==== Release 5_5_0

.Major new features:
* Migrated BCD-UI to Java 11
* Updated to log4j2
* Updated 3rd-party java libs
* Updated 3rd-party js libs
* Updated BCD-UI js code and documentation to ECMA 6 standard
* Removed jQuery Mobile

.Incompatibilities:
* Client
** Due to a security fix in latest jQuery, be sure you don't use self closing html elements in jQuery.append()/etc. (Example: <span/> -> <span></span>)
** echart uses new default colors, ensure to set colors in your projects and don't rely on default coloring
** Due to fontawesome/bootstrap/nouislider update, you need to rebuild your themes jar
** Grid pagination/action buttons are now in divs, so you may need to check your styling
** Grid editor bcduiSingleSelect was removed, use bcduiSimpleDropDown instead
** Moved QuickEdit to package bcdui.widgetNg
** createFixedTableHeader uses new css classes, ensure your theme includes them
** bcdui.util.xml.parseFilterExpression was moved to bcdui.wrs.wrsUtil.parseFilterExpression

* Config
** In web.xml: add invalidRequest.blockSemicolon = false and check for other changes in Server/configFiles/web.xml